--- a/ifwlrc.html
+++ b/ifwlrc.html
@@ -18,6 +18,8 @@
       transition:transform .08s ease, filter .12s ease, opacity .12s ease;
       color:#fff;font-size:18px; padding:16px;
       line-height:1.15;
+      position:relative;
+      overflow:hidden;
     }
     button:active{transform:scale(.98)}
     button[disabled]{opacity:.55; cursor:not-allowed}
@@ -26,6 +28,58 @@
     .yellow{color:#111827;background:radial-gradient(circle at 30% 25%, #fff3b0, #f59e0b 45%, #7c4a00)}
     .green{background:radial-gradient(circle at 30% 25%, #86efac, #22c55e 45%, #14532d)}
     .blue{background:radial-gradient(circle at 30% 25%, #93c5fd, #3b82f6 45%, #1e3a8a)}
+
+    /* ✅ NEW: Quali split button styles (as requested) */
+    .quallyRed{
+      background:radial-gradient(circle at 30% 25%, #ff7a7a, #ef4444 45%, #7f1d1d);
+      color:#fff;
+    }
+    .quallySilver{
+      background:radial-gradient(circle at 30% 25%, #f3f4f6, #9ca3af 45%, #4b5563);
+      color:#fff;
+      text-shadow:0 2px 10px rgba(0,0,0,.35);
+    }
+    .quallyWhite{
+      background:radial-gradient(circle at 30% 25%, #ffffff, #e5e7eb 55%, #9ca3af);
+      color:#111827;
+      text-shadow:none;
+    }
+
+    /* ✅ NEW: Smaller row for extra buttons */
+    .rowSmall{margin-top:16px}
+    .smallCircle{
+      width:190px;
+      height:190px;
+      font-size:15px;
+      padding:14px;
+    }
+
+    /* ✅ NEW: live green system circle (console button) */
+    .liveDotWrap{
+      margin-top:10px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:8px;
+      font-size:12px;
+      font-weight:900;
+      letter-spacing:.2px;
+      opacity:.95;
+    }
+    .liveDot{
+      width:14px;
+      height:14px;
+      border-radius:999px;
+      background:#22c55e;
+      box-shadow:0 0 0 0 rgba(34,197,94,.65);
+      animation:pulse 1.25s infinite;
+      border:1px solid rgba(255,255,255,.35);
+    }
+    @keyframes pulse{
+      0%{box-shadow:0 0 0 0 rgba(34,197,94,.55)}
+      70%{box-shadow:0 0 0 14px rgba(34,197,94,0)}
+      100%{box-shadow:0 0 0 0 rgba(34,197,94,0)}
+    }
 
     .status{margin-top:18px;font-family:ui-monospace,Menlo,Consolas,monospace;opacity:.95;white-space:pre-wrap}
     .hint{margin-top:10px;opacity:.75;font-size:13px}
@@ -218,6 +272,38 @@
       </button>
     </div>
 
+    <!-- ✅ NEW: Extra buttons (4) -->
+    <div class="row rowSmall">
+      <!-- 1) Console-only Green Flag -->
+      <button class="green smallCircle" id="btnGreenConsole">
+        GREEN FLAG<br>
+        <span style="font-weight:900;opacity:.95">— CONSOLE ONLY —</span><br><br>
+        Adhere to in-game rules &amp; flags
+        <div class="liveDotWrap">
+          <span class="liveDot" aria-hidden="true"></span>
+          <span>SYSTEM LIVE</span>
+        </div>
+      </button>
+
+      <!-- 2) Quali split: Beginner (red box, white writing) -->
+      <button class="quallyRed smallCircle" id="btnQBeginner">
+        QUALI SPLIT<br><br>
+        BEGINNER
+      </button>
+
+      <!-- 3) Quali split: AMS (silver box, white writing) -->
+      <button class="quallySilver smallCircle" id="btnQAms">
+        QUALI SPLIT<br><br>
+        AMS
+      </button>
+
+      <!-- 4) Quali split: PROS (white box, black writing) -->
+      <button class="quallyWhite smallCircle" id="btnQPros">
+        QUALI SPLIT<br><br>
+        PROS
+      </button>
+    </div>
+
     <div class="minirow">
       <span class="pill" id="endpointPill">Endpoint: —</span>
       <span class="pill" id="livePill">Live feed: —</span>
@@ -288,6 +374,12 @@
     const btnRefreshCheckins = document.getElementById("btnRefreshCheckins");
     const btnClearCheckins = document.getElementById("btnClearCheckins");
 
+    // ✅ NEW buttons
+    const btnGreenConsole = document.getElementById("btnGreenConsole");
+    const btnQBeginner = document.getElementById("btnQBeginner");
+    const btnQAms = document.getElementById("btnQAms");
+    const btnQPros = document.getElementById("btnQPros");
+
     // Modal elements (kept)
     const modalBackdrop = document.getElementById("checkinModal");
     const btnCloseModal = document.getElementById("btnCloseModal");
@@ -302,6 +394,11 @@
       document.getElementById("btnGreen"),
       document.getElementById("btnReset"),
       document.getElementById("btnCheckIn"),
+      // ✅ NEW: include new buttons in busy/disable logic
+      btnGreenConsole,
+      btnQBeginner,
+      btnQAms,
+      btnQPros,
     ];
 
     endpointPill.textContent = `Endpoint: ${WORKER_BASE}`;
@@ -596,6 +693,13 @@
     document.getElementById("btnVscPit").addEventListener("click", ()=>setState("vsc_pit"));
     document.getElementById("btnGreen").addEventListener("click", ()=>setState("green"));
     document.getElementById("btnReset").addEventListener("click", ()=>setState("server_reset"));
+
+    // ✅ NEW: Console green + Quali split notifications
+    // These are just new state strings sent through the same Durable Object so your simhub_flag HTML can react instantly.
+    btnGreenConsole.addEventListener("click", ()=>setState("green_console"));
+    btnQBeginner.addEventListener("click", ()=>setState("qually_beginner"));
+    btnQAms.addEventListener("click", ()=>setState("qually_ams"));
+    btnQPros.addEventListener("click", ()=>setState("qually_pros"));
 
     // ✅ UPDATED: blue button triggers end-user check-in screen (does NOT open modal)
     btnCheckIn.addEventListener("click", async () => {
